# koodaus

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test_integers.py  tox.ini
.github/workflows/: ci.yml
koodaus/: integers.py
