[metadata]
name = koodaus
version = attr:koodaus.__version__
description = Encoding/decoding library for Python
author = Valohai
author_email = info@valohai.com
url = https://github.com/valohai/koodaus
license = MIT

[options]
python_requires = >=3.6
packages =
    koodaus

[options.extras_require]
test =
    pytest
    pytest-cov

[pep8]
max-line-length = 79

[flake8]
max-line-length = 79
max-complexity = 10

[tool:pytest]
norecursedirs = bower_components node_modules .git venv* .tox

[isort]
atomic = true
combine_as_imports = false
indent = 4
length_sort = false
line_length = 79
multi_line_output = 5
not_skip = __init__.py
order_by_type = false
wrap_length = 79
