[metadata]
name = koodaus
version = attr:koodaus.__version__
description = Encoding/decoding library for Python
author = Valohai
author_email = info@valohai.com
url = https://github.com/valohai/koodaus
license = MIT

[options]
include_package_data = True
python_requires = >=3.6
packages =
    koodaus

[options.extras_require]
test =
    pytest
    pytest-cov
lint =
    flake8
    isort
    mypy

[flake8]
max-line-length = 79
max-complexity = 10

[tool:pytest]
norecursedirs = .git venv* .tox

[isort]
profile = black
multi_line_output = 3
